Fixed a bug in the in the /api/users :POST for creating new user
